<resources>
    <string name="app_name">Lumecolors</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello">Hello</string>
    <string name="rp">Rp 150.000</string>
    <string name="stock">Stock : 20</string>
    <string name="stock1">Stock : </string>
    <string name="goods">Goods</string>
    <string name="list">List of item :</string>
    <string name="name">Name</string>
    <string name="admin">Admin</string>
    <string name="email">Email</string>
    <string name="get">Get In</string>
    <string name="search">Search</string>
    <string name="history">History :</string>
    <string name="history_loading">History Loading In:</string>
    <string name="history1">History</string>
    <string name="date">Date :</string>
    <string name="loading_in">Loading In</string>
    <string name="approve_in">Approve In</string>
    <string name="approve_in_">Approve In : 10</string>
    <string name="approve_out">Approve Out</string>
    <string name="stock_opname">Stock Opname</string>
    <string name="stock_in">Stock In</string>
    <string name="stock_out">Stock Out</string>
    <string name="super_admin">Super Admin</string>
    <string name="dont">Do not have an account?</string>
    <string name="ready">Already have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="date_entry">Date entry</string>
    <string name="date_from">Date from</string>
    <string name="validasi_from">Validasi from</string>
    <string name="validasi_to">Validasi to</string>
    <string name="alamat">Alamat</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kab">Kabupaten</string>
    <string name="prov">Provinsi</string>
    <string name="zip">ZIP Kode</string>
    <string name="jl">JL Alamat</string>
    <string name="dari">Dari</string>
    <string name="a">Agung</string>
    <string name="merchant">Merchant</string>
    <string name="agen">Web Agent</string>
    <string name="no_order">No. Order</string>
    <string name="customer">Customer</string>
    <string name="cart">Cart</string>
    <string name="tanggal_validasi">Tgl. Validasi</string>
    <string name="date_to">Date to</string>
    <string name="out_date">Out date</string>
    <string name="exp">Expired date</string>
    <string name="ref">Refrensi</string>
    <string name="kepada">Kepada</string>
    <string name="no_ref">No. Ref</string>
    <string name="telp">No. Telp</string>
    <string name="qty_pass">Qty pass</string>
    <string name="qty">Qty</string>
    <string name="qty_">Qty :</string>
    <string name="approved">Approved</string>
    <string name="packing_approve">Approve Packing</string>
    <string name="send_approve">Approve Sender</string>
    <string name="list_qr">List QR Code</string>
    <string name="qr">QR Code</string>
    <string name="qr_dari">QR Code dari</string>
    <string name="qr_sampai">QR Code sampai</string>
    <string name="plus">Tambah</string>
    <string name="nama">Nama Produk</string>
    <string name="pilih">Pilih QR Code</string>
    <string name="detail_refrensi">Detail Refrensi :</string>
    <string name="detail_alamat">Detail Alamat :</string>
    <string name="refrensi">Refrensi</string>
    <string name="no_delivery">No. Delivery</string>
    <string name="id">ID</string>
    <string name="kode">Kode</string>
    <string name="kode_ex">K12EF345</string>
    <string name="id_in">IN-12345678910</string>
    <string name="qty_pass_">Qty pass : 100</string>
    <string name="qty_reject">Qty reject</string>
    <string name="reject">Reject</string>
    <string name="level">Level</string>
    <string name="product">Product</string>
    <string name="batch">No. Batch</string>
    <string name="delivery">No delivery</string>
    <string name="no">100</string>
    <string name="simpan">Simpan</string>
    <string name="no_batch">M1001</string>
    <string name="number">A0111</string>
    <string name="status">Status</string>
    <string name="detail">Detail</string>
    <string name="ex_date">2001-10-11</string>
    <string name="gudang">Gudang</string>
    <string name="ex_period">11/2021</string>
    <string name="exp_date">Expired Date</string>
    <string name="approve">Approve</string>
    <string name="pending">Pending</string>
    <string name="show">Show Approve Detail</string>
    <string name="periode">Periode</string>
    <string name="yes">Yes</string>
    <string name="not">No</string>
    <string name="logout">Apakah anda yakin ingin logout ?</string>
    <string name="approve_packing">Apakah anda yakin sudah terpacking ?</string>
    <string name="approve_sender">Apakah anda yakin sudah terkirim ?</string>
    <string name="approve_qr">Apakah anda yakin sudah memilih QR yang sesuai?</string>
    <string name="terpenuhi">Sudah memenuhi permintaan !</string>
    <string name="tidak_terpenuhi">Jumlah tidak sesuai permintaan</string>
    <string name="tip">Gunakan akun yang telah terdaftar.</string>
    <string name="period">Periode</string>
    <string name="insert_by">Insert By</string>
    <string name="approve_by">Approve By</string>
    <string name="kategori">Kategori</string>
    <string name="produk">Produk</string>
    <string name="qty_stock">QTY Stock</string>
    <string name="kartu_stock">Kartu Stock</string>
    <string name="edit_stock">Edit Stock</string>
    <string name="save">Save Stock</string>
    <string name="back">Kembali</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="pilih_level">Pilih Level</string>
    <string name="approve_picker">Approve Picker</string>
    <string name="approve_checker">Approve Checker</string>
</resources>