<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="2dp"
    tools:ignore="ContentDescription, DisableBaselineAlignment">

    <RelativeLayout
        android:id="@+id/all_view_picker"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:paddingVertical="14dp"
                android:background="@drawable/custom_linear_register">

                <LinearLayout
                    android:id="@+id/button_list_qr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_barang"
                    android:layout_marginTop="14dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/custom_button_login"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/qr_code_white" />

                        <TextView
                            android:id="@+id/text_qr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="14dp"
                            android:text="@string/pilih"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_packing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_barang"
                    android:layout_marginTop="14dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/custom_button_login"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/packing" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="14dp"
                            android:text="@string/packing_approve"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_barang"
                    android:layout_marginTop="14dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/custom_button_login"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/send" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="14dp"
                            android:text="@string/send_approve"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/button_approved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_barang"
                    android:layout_marginTop="14dp"
                    android:paddingVertical="2dp"
                    android:background="@drawable/custom_background_approve"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_medium"
                            android:gravity="center"
                            android:paddingVertical="4dp"
                            android:paddingHorizontal="14dp"
                            android:text="@string/approved"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:src="@drawable/check" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_barang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="5">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:text="@string/merchant"
                                android:textColor="@color/bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/merchant_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="-4dp"
                                android:text="@string/agen"
                                android:textColor="@color/semi_bold"
                                android:textSize="20sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:text="@string/no_order"
                                android:textColor="@color/bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/no_order_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-4dp"
                                android:text="@string/no"
                                android:textColor="@color/semi_bold"
                                android:textSize="20sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:text="@string/customer"
                                android:textColor="@color/bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/customer_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-4dp"
                                android:text="@string/a"
                                android:textColor="@color/semi_bold"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:text="@string/cart"
                                android:textColor="@color/bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/cart_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-4dp"
                                android:text="@string/produk"
                                android:textColor="@color/semi_bold"
                                android:textSize="20sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="4dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:text="@string/tanggal_validasi"
                                android:textColor="@color/bold"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tgl_validasi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:layout_marginTop="-4dp"
                                android:text="@string/ex_date"
                                android:textColor="@color/semi_bold"
                                android:textSize="20sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/more"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/more_black" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardBackgroundColor="@color/red_shadow"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5">

                        <ImageView
                            android:id="@+id/img_detail"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/detail" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/img_detail"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="6dp"
                            android:gravity="center"
                            android:text="@string/detail"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="invisible">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:text="@string/rp"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/delete" />

                    </RelativeLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/more_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:src="@drawable/more" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>